# sfhash

./: Cargo.toml  README.md
examples/: sfh.rs
src/: lib.rs
