[package]
name = "hsieh-hash"
version = "0.1.1"
authors = ["Paul Hsieh", "Xiphoseer"]
edition = "2018"
license = "LGPL-2.1"
description = "The `Hsieh Hash` or `SuperFastHash` function"
homepage = "https://crates.io/crates/hsieh-hash"
repository = "https://github.com/xiphoseer/rust-hsieh-hash"
readme = "README.md"

[dependencies]
